force-app/main/default/objects/WorkOrder/fields/vlocity_ps__DateAcknowledgedByVendor__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__DateAcknowledgedByVendor__c</fullName>
    <label>Date Acknowledged By Vendor</label>
    <type>DateTime</type>
</CustomField>