force-app/main/default/objects/WorkOrder/fields/vlocity_ps__DateAssignedToVendor__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__DateAssignedToVendor__c</fullName>
    <label>Date Assigned To Vendor</label>
    <type>DateTime</type>
</CustomField>