force-app/main/default/objects/WorkOrder/fields/vlocity_ps__HoursSpent__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__HoursSpent__c</fullName>
    <label>Hours Spent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>