force-app/main/default/objects/WorkOrder/fields/vlocity_ps__InventoryItemId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__InventoryItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <referenceTo>vlocity_ps__InventoryItem__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>WorkOrders</relationshipName>
    <type>Lookup</type>
</CustomField>