force-app/main/default/objects/WorkOrder/fields/vlocity_ps__PremiseId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__PremiseId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Premise</label>
    <referenceTo>vlocity_ps__Premises__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>WorkOrders</relationshipName>
    <type>Lookup</type>
</CustomField>