force-app/main/default/objects/WorkOrder/listViews/vlocity_ps__My_WorkOrders.listView-meta.xml
<ListView>
    <fullName>vlocity_ps__My_WorkOrders</fullName>
    <filterScope>Mine</filterScope>
    <label>My Work Orders</label>
</ListView>